0.9 + Added admin role backend and API + Updated API for getting results
Added API and backend functions for getting admin role boolean, updated API doc.

Added API for getting all test results of user.

Created admin profile for testing purposes, updated SQL file is part of the commit.
